# investment-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build_binary.yml  deploy_pages.yml  update_data.yml
docs/: index.html
docs/reports/: macro_TNX.html  macro_TYX.html  stock_DHT.html  stock_FRO.html  stock_GOOGL.html  stock_IAU.html  stock_INSW.html  stock_MSFT.html  stock_NAT.html  stock_STNG.html  stock_TNK.html  stock_TRMD.html  stock_TSM.html
scripts/: build_binary.py  build_binary.sh  fetch_data.py
src/investment_mcp/: __init__.py  config.py  server.py
src/investment_mcp/cache/: __init__.py  store.py
src/investment_mcp/knowledge/: macro_indicators.md  shipping_market.md  tanker_company_profiles.md  vlcc_analysis.md  yield_curve_analysis.md
src/investment_mcp/providers/: __init__.py  base.py  fred.py  shipping.py  yahoo.py
src/investment_mcp/reports/: __init__.py  generator.py
src/investment_mcp/reports/templates/: base.html  dashboard.html  detail.html
src/investment_mcp/tools/: data_tools.py  note_tools.py  report_tools.py
