[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-mcp"
version = "0.1.0"
description = "MCP server for personal investment analysis — macroeconomics, VLCC/shipping markets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "fredapi>=0.5.2",
    "yfinance>=0.2.36",
    "plotly>=5.18.0",
    "jinja2>=3.1.3",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.3.0",
]

[project.scripts]
investment-mcp = "investment_mcp.server:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/investment_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
